--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "serverless-iam-roles-per-function": "^3.2.0",
     "serverless-step-functions": "^3.11.1"
   }
 }
